<?xml version="1.0"?>
<package format="2">
    <name>generalized_lazy_search</name>
    <version>0.0.0</version>
    <description>Generalized Lazy Search (GLS)</description>
    <author email="adityavk@cs.uw.edu">Aditya Vamsikrishna Mandalika</author>
    <maintainer email="adityavk@cs.uw.edu"></maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>ompl</depend>
    <depend>boost</depend>
    <depend>eigen</depend>

    <!-- This is required by REP-136. -->
    <exec_depend>catkin</exec_depend>
    <buildtool_depend>cmake</buildtool_depend>
    <buildtool_depend>clang-format-3.8</buildtool_depend>
    <buildtool_depend>lcov</buildtool_depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>